使用するライブラリやコンパイルオプションを編集